Fix compilation issues. Refactor communication between DropInService and DropInActivity (TEST) Change AppTheme to MaterialComponents

--- a/base-ui/src/main/res/values/styles.xml
+++ b/base-ui/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
 
 <resources>
     <!-- Placeholder to be overridden by main app -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight" />
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.Bridge" />
 
     <!-- Base theme for Checkout -->
     <style name="AdyenCheckout" parent="AppTheme" />
