Fix some PMD and Lint issues

--- a/drop-in/src/main/res/layout/activity_drop_in.xml
+++ b/drop-in/src/main/res/layout/activity_drop_in.xml
@@ -12,6 +12,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DropInActivity">
+    tools:context=".ui.DropInActivity"
+    tools:ignore="MergeRootFrame">
 
 </FrameLayout>
